# YourHealthAssistant

./: CMakeLists.txt  CalendarWidget.cpp  CalendarWidget.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
forms/: mainwindow.ui
include/: MainWindow.h
lib/: MainWindow.cpp
